--- a/src/pages/home/NewFile.css
+++ b/src/pages/home/NewFile.css
@@ -1,11 +1,16 @@
+/* body{
+    margin: 0;
+    background: #043344;
+} */
 .scnd-component-container{
-    width: 100vw;
+    width: 100%;
     height: 100vh;
     background: #043344;
     text-align: -webkit-center;
     display: flex;
     align-items: center;
     justify-content: center;
+    
 }
 .scnd-component-inner-container{
     width: 85vw;
@@ -13,31 +18,81 @@
     display: flex;
     /* justify-content: space-evenly; */
     align-content: center;
+   padding-top: 40px;
 }
 .scnd-component-part-two{
-    width: 43vw;
+   
+   
+}
+.scnd-component-part-one-head{
+    font-family: 'Objective';
+    font-style: normal;
+    font-weight: 500;
+    font-size: 32px;
+    line-height: 133.3%;
+    color: #FFFFFF;
+}
+.scnd-component-part-one-headtwo{
+    font-family: 'Objective';
+    font-style: normal;
+    font-weight: 500;
+    font-size: 20px;
+    line-height: 150%;
+    /* or 30px */
+    
+    
+    /* NEW 3 */
+    
+    color: #32C69A;
 }
 .scnd-component-part-one{
-    width: 43vw;
+    width: 40vw;
+    height: 80vh;
     text-align: initial;
 }
-.scnd-component-part-one h1{
+.scnd-component-part-one-headthree{
+    font-family: 'Objective';
+font-style: normal;
+font-weight: 500;
+font-size: 16px;
+line-height: 150%;
+/* or 24px */
+
+
+/* NEW 4 */
+
+color: #FF7762;
+
+}
+.scnd-component-part-one-para{
+    font-family: 'Objective';
+font-style: normal;
+font-weight: 500;
+font-size: 14px;
+line-height: 145%;
+color: #FFFFFF;
+text-align: justify;
+}
+.par{
+    font-weight: 700;
+}
+/* .scnd-component-part-one h1{
 font-weight: 400;
 color: #fff;
-}
+} */
 
-.scnd-component-part-one h2{
+/* .scnd-component-part-one h2{
     font-weight: 400;
     color: #32C69A;
-    }
-    .scnd-component-part-one h3{
+    } */
+    /* .scnd-component-part-one h3{
     color: #FF7762;
     font-weight: 500;
-    }
-    .scnd-component-part-one p{
+    } */
+    /* .scnd-component-part-one p{
         color: #fff;
         font-weight: 500;
-        }
+        } */
 
 .scnd-component-part-one a{
     text-decoration: none;
@@ -46,11 +101,21 @@ color: #fff;
     padding: 2vh 3vw;
     border-radius: 6px;
     color: #fff;
-    margin-top: 2vh;
+    
+}
+.scnd-component-part-one-btn{
+margin-top: 35px;
 }
 
 .video-section{
-    height: 85vh;
-    width: 43vw;
-    border-radius: 45px;
+    width: 564px;
+    height: 500px;  
+    border-radius: 10px;
+    background: #043344;
+    /* width: 40vw;
+    height: 90vh;
+     */
+   background-color: white;
+   margin-left: 20px;
+   margin-top: 35px;
 }
