--- a/src/pages/home/mainHeader.css
+++ b/src/pages/home/mainHeader.css
@@ -1,21 +1,19 @@
-
 .main_head {
   display: flex;
   flex-direction: row;
   justify-content: space-around;
   padding: 65px 150px;
-margin-top: 50px;
   background: linear-gradient(
       180deg,
-      #f9fffe 42.05%,
-      #ffffff 42.06%,
-      #e1e1e1 100%
+      #F9FFFE 42.05%,
+      #FFFFFF 42.06%,
+      #E1E1E1 100%
     ),
-    linear-gradient(66.18deg, #f9fffe 49.34%, #ffffff 49.35%, #e0e0e0 102.81%);
-  
+    linear-gradient(66.18deg, #F9FFFE 49.34%, #FFFFFF 49.35%, #E0E0E0 102.81%);
+    margin-top: 40px;
 }
 .main_left_para {
-  color: #ff7762;
+  color: #FF7762;
   font-style: normal;
   font-weight: 500;
   font-size: 16px;
@@ -36,24 +34,17 @@ margin-top: 50px;
   width: 50%;
   gap: 15px;
   padding: 35px 0px;
-
 }
-
 .main_left_top {
   padding-bottom: 8px;
 }
-
 .main_left_heading {
- 
-  
-  
   width: 525px;
   padding-bottom: 4px;
 }
 .main_left_heading_dot {
-  color: #32c69a;
+  color: #32C69A;
 }
-
 .main_left_paragraph {
   font-family: "Objective";
   font-style: normal;
@@ -69,21 +60,20 @@ margin-top: 50px;
     width: 350px;
     height: 140px;
 }
-
 .main_left_list {
   font-family: "Objective";
   font-style: normal;
   font-weight: 500;
   font-size: 14px;
   line-height: 210%;
-  color: #32c69a;
+  color: #32C69A;
   /* margin-left: -12px; */
 }
 .main_left_div2{
     margin: 10px 20px
 }
 .main_left_btn {
-  background: #ff7762;
+  background: #FF7762;
   box-shadow: 0px 24px 38px 3px rgba(50, 198, 176, 0.1),
     0px 9px 46px 8px rgba(50, 198, 176, 0.08),
     0px 11px 15px -7px rgba(50, 198, 176, 0.16);
@@ -96,11 +86,10 @@ margin-top: 50px;
   font-style: normal;
   font-weight: 500;
   font-size: 16px;
-  color: #ffffff;
+  color: #FFFFFF;
   line-height: 24px;
   word-spacing: 1px;
 }
-
 .btn_txt {
   width: 215px;
   height: 24px;
@@ -108,48 +97,38 @@ margin-top: 50px;
   font-style: normal;
   font-weight: 500;
   font-size: 16px;
-  color: #ffffff;
+  color: #FFFFFF;
   line-height: 24px;
   word-spacing: 1px;
 }
-
 .main_right {
   display: flex;
   width: 50%;
   position: relative;
 }
-
 .main_right_img {
   /* position: absolute; */
 }
-
 .main_image_pic {
   width: 536px;
   height: 689px;
 }
-
 .calender_img {
   position: absolute;
-
   box-shadow: 0px 24px 38px 3px rgba(93, 114, 140, 0.1), 0px 9px 46px 8px rgba(93, 114, 140, 0.08), 0px 11px 15px -7px rgba(93, 114, 140, 0.16);
   background-color: white;
   padding: 12px 12px;
   bottom: 43px;
   left: -60px;
   border-radius: 3px;
-
 }
-
 .remotework_img {
   position: absolute;
   bottom: 55px;
-  right: 0px;
-
+  left: 365px;
 }
-
 .Emoji_img {
   position: absolute;
-  right: 0px;
+  left: 415px;
   top: 80px;
-
 }
