--- a/src/pages/home/ManagementModel.css
+++ b/src/pages/home/ManagementModel.css
@@ -3,8 +3,8 @@
     flex-direction: column;
     gap: 20px;
     padding-top: 80px;
-    padding-left: 177px;
-    padding-right: 158px;
+    padding-left: 190px;
+    padding-right: 190px;
     padding-bottom: 90px;
 }
 .card{
@@ -27,4 +27,27 @@ font-weight: 500;
 font-size: 14px;
 height: 40px;
 color: #043344;
+}
+.main_btn_tag{
+    background: #FF7762;
+  box-shadow: 0px 24px 38px 3px rgba(50, 198, 176, 0.1),
+    0px 9px 46px 8px rgba(50, 198, 176, 0.08),
+    0px 11px 15px -7px rgba(50, 198, 176, 0.16);
+  border-radius: 4px;
+  border: none;
+  padding: 12px 24px;
+  width: 225px;
+  height: 48px;
+  font-family: "Objective";
+  font-style: normal;
+  font-weight: 500;
+  font-size: 16px;
+  color: #FFFFFF;
+  line-height: 24px;
+  word-spacing: 1px;
+}
+.main_btn{
+    display: flex;
+    margin-bottom: -24px;
+    justify-content: center;
 }
