--- a/src/pages/home/NewFile.css
+++ b/src/pages/home/NewFile.css
@@ -1,30 +1,28 @@
-/* body{
-    margin: 0;
-    background: #043344;
-} */
-.scnd-component-container{
+
+.scnd-component-container1{
     width: 100%;
-    height: 100vh;
-    background: #043344;
+    height: 100%;
+    background-color: #043344 ;
     text-align: -webkit-center;
     display: flex;
     align-items: center;
     justify-content: center;
     
 }
-.scnd-component-inner-container{
-    width: 85vw;
-    height: 90vh;
+.scnd-component-inner-container1{
+    /* width: 85vw; */
+    /* height: 90vh; */
     display: flex;
     /* justify-content: space-evenly; */
     align-content: center;
-   padding-top: 40px;
+   /* padding-top: 40px; */
+   margin: 60px auto;
 }
 .scnd-component-part-two{
-   
+   margin-left: 30px;
    
 }
-.scnd-component-part-one-head{
+.scnd-component-part-one1-head{
     font-family: 'Objective';
     font-style: normal;
     font-weight: 500;
@@ -32,7 +30,7 @@
     line-height: 133.3%;
     color: #FFFFFF;
 }
-.scnd-component-part-one-headtwo{
+.scnd-component-part-one1-headtwo{
     font-family: 'Objective';
     font-style: normal;
     font-weight: 500;
@@ -45,12 +43,12 @@
     
     color: #32C69A;
 }
-.scnd-component-part-one{
+.scnd-component-part-one1{
     width: 40vw;
-    height: 80vh;
+    /* height: 80vh; */
     text-align: initial;
 }
-.scnd-component-part-one-headthree{
+.scnd-component-part-one1-headthree{
     font-family: 'Objective';
 font-style: normal;
 font-weight: 500;
@@ -64,7 +62,7 @@ line-height: 150%;
 color: #FF7762;
 
 }
-.scnd-component-part-one-para{
+.scnd-component-part-one1-para{
     font-family: 'Objective';
 font-style: normal;
 font-weight: 500;
@@ -94,7 +92,7 @@ color: #fff;
         font-weight: 500;
         } */
 
-.scnd-component-part-one a{
+.scnd-component-part-one1 a{
     text-decoration: none;
     border: 1px solid #FF7762;
     background: #FF7762;
@@ -103,19 +101,43 @@ color: #fff;
     color: #fff;
     
 }
-.scnd-component-part-one-btn{
+.scnd-component-part-one1-btn{
 margin-top: 35px;
 }
 
-.video-section{
+/* .video-section{
     width: 564px;
     height: 500px;  
     border-radius: 10px;
     background: #043344;
-    /* width: 40vw;
+
+    width: 40vw;
     height: 90vh;
-     */
+    
    background-color: white;
    margin-left: 20px;
    margin-top: 35px;
+} */
+
+.video-tag{
+    /* background-color: red; */
+   margin-top: 20px;
+
+    width: 564px;
+    height: 500px;
+    object-fit: cover;
+     /* 8:5 Aspect Ratio */
+    border-radius: 30px;
+}
+
+@media screen and (min-width: 1440px){
+
+    /* .scnd-component-inner-container1{
+        justify-content: center;
+        align-items: center;
+    }
+    .scnd-component-part-one1{
+        justify-content: center;
+        align-items: center;
+    } */
 }
