--- a/src/pages/home/downloadApp.css
+++ b/src/pages/home/downloadApp.css
@@ -51,7 +51,7 @@
 .whitetop_div {
   position: absolute;
   top: 0px;
-  left: 571px;
+  left: 36%;
 }
 .whitetop_circle {
   width: 180px;
@@ -67,10 +67,14 @@
 }
 .bottom_div {
   position: absolute;
-  bottom: 65px;
+  bottom: 45px;
   z-index: 1;
-  right: 375px;
+  /* right: 450px; */
+  left: 48%;
 }
+
+
+
 .bottom_circle {
   width: 127px;
 }
@@ -118,10 +122,10 @@
   height: 65px;
 }
 .heading_h2,
-.text_align_para{
-  font-family: "Objective"
+.text_align_para {
+  font-family: "Objective";
 }
-.feedback_heading_para{
+.feedback_heading_para {
   font-weight: 500;
   font-size: 32px;
   font-style: normal;
@@ -154,6 +158,13 @@
   display: flex;
   flex-direction: column;
   padding: 40px 0px;
+  background: linear-gradient(
+      71.26deg,
+      #f9fffe -8.88%,
+      #ffffff -8.87%,
+      #f8f8f8 103.17%
+    ),
+    #1a938a;
 }
 
 .feedback_sec {
@@ -246,14 +257,13 @@
   font-family: "Objective";
   color: #043344;
 }
-.featureParadiv{
+.featureParadiv {
   height: 120px;
   width: 903px;
   margin: 25px 0px;
-
 }
-.featureBtn{
-  font-family: 'Objective';
+.featureBtn {
+  font-family: "Objective";
   font-style: normal;
   font-weight: 500;
   font-size: 16px;
@@ -261,9 +271,40 @@
   line-height: 24px;
   text-align: center;
   background-color: #f4f6f7;
-  border-color: #FF7762;
+  border-color: #ff7762;
   border-width: 2px;
   border-style: solid;
   padding: 7px 14px;
+}
 
+
+@media screen and (max-width: 1920px) {
+  .bottom_div {
+    left: 45%;
+  }
+  .whitetop_div {
+    left: 35%;
+  }
+}
+@media screen and (max-width: 1700px) {
+  
+  .whitetop_div {
+    left: 34%;
+  }
+}
+@media screen and (max-width: 1530px) {
+  
+  .whitetop_div {
+    left: 41%;
+  }
+  .bottom_div {
+    left: 46%;
+  }
+}
+@media screen and (max-width: 1440px) {
+  
+  
+  .bottom_div {
+    left: 55%;
+  }
 }
