--- a/src/pages/home/featureStyle.css
+++ b/src/pages/home/featureStyle.css
@@ -1,6 +1,13 @@
 .featuresDiv {
-  background-color: #F4F6F7;
+  background-color: #f4f6f7;
   padding: 91px 148px;
+  display: flex;
+  flex-direction: column;
+}
+.mainDivAlign {
+  display: flex;
+  flex-direction: column;
+  /* width: 70%; */
 }
 .featureHeading {
   width: 405px;
@@ -59,20 +66,62 @@
   flex-direction: row;
   /* padding: 30px; */
   margin: 35px;
+  border: 1px solid rgb(50, 198, 154, 0.2);
+  border-radius: 30px;
+}
+.featureRow1 {
+  display: flex;
+  flex-direction: row;
+  /* padding: 30px; */
+  margin: 35px;
 }
 .featureColumn {
   display: flex;
   flex-direction: row-reverse;
   /* padding: 60px 35px;
      */
-  margin: 35px;
+  margin: 0px 35px;
   /* padding: 30px; */
-
-  gap: 42px;
+  /* width: 65%; */
+  gap: 20px;
+  border: 1px solid rgb(50, 198, 154, 0.2);
+  border-radius: 30px;
 }
+/* @media screen and (max-width: 1920px) {
+  .mainDivAlign {
+    align-items: center;
+  }
+  .featureColumn {
+    width: 65%;
+  }
+  .featureRow {
+    width: 65%;
+  }
+  .featureRow1 {
+    width: 65%;
+    align-items: center;
+  }
+} */
+
+@media screen and (min-width: 1440px) {
+  .featuresDiv {
+    align-items: center;
+  }
+  .featureHeading {
+    width: 100%;
+    text-align: center;
+    margin: 30px 0px;
+  }
+  .featureHead {
+    text-align: center;
+    width: 100%;
+  }
+}
+
 .featureCol2Img {
   width: 435px;
-  height: 310px;
+  /* height: 310px; */
+  height: 100%;
   border-radius: 30px;
 }
 .featureColPara {
@@ -101,7 +150,9 @@
   height: 40px;
 }
 .featureCol1 {
-  /* width: 45%; */
+  margin-left: 20px;
+  margin-top: 10px;
+  margin-bottom: 15px;
 }
 .featurePoints {
   font-family: "Objective";
