--- a/src/pages/home/mainHeader.css
+++ b/src/pages/home/mainHeader.css
@@ -1,19 +1,25 @@
 .main_head {
+  padding-top: 8%;
   display: flex;
   flex-direction: row;
-  justify-content: space-around;
-  padding: 65px 150px;
+  width: 100vw;
+  height: 100vh;
+  margin: auto;
+}
+.heroSection {
+  padding: 20px 10px;
+  display: flex;
+  flex-direction: column;
   background: linear-gradient(
       180deg,
-      #F9FFFE 42.05%,
-      #FFFFFF 42.06%,
-      #E1E1E1 100%
+      #f9fffe 42.05%,
+      #ffffff 42.06%,
+      #e1e1e1 100%
     ),
-    linear-gradient(66.18deg, #F9FFFE 49.34%, #FFFFFF 49.35%, #E0E0E0 102.81%);
-    margin-top: 40px;
+    linear-gradient(66.18deg, #f9fffe 49.34%, #ffffff 49.35%, #e0e0e0 102.81%);
 }
 .main_left_para {
-  color: #FF7762;
+  color: #ff7762;
   font-style: normal;
   font-weight: 500;
   font-size: 16px;
@@ -26,24 +32,28 @@
   font-size: 40px;
   line-height: 120%;
   color: #043344;
-  margin: 0px
+  margin: 0px;
 }
 .main_left {
+  /* background-color: #32C69A;
+   width: 45%; */
+  padding-top: 3%;
   display: flex;
   flex-direction: column;
-  width: 50%;
-  gap: 15px;
-  padding: 35px 0px;
+  width: 50vw;
+  gap: 7px;
+  /* margin: auto; */
+  margin-left: 10%;
 }
 .main_left_top {
-  padding-bottom: 8px;
+  /* padding-bottom: 8px; */
 }
 .main_left_heading {
   width: 525px;
   padding-bottom: 4px;
 }
 .main_left_heading_dot {
-  color: #32C69A;
+  color: #32c69a;
 }
 .main_left_paragraph {
   font-family: "Objective";
@@ -52,13 +62,15 @@
   font-size: 14px;
   line-height: 145%;
   color: #205260;
+  width: 360px;
 }
-.text_bold{
-    font-weight: 700;
+.text_bold {
+  font-weight: 700;
 }
-.main_left_div{
-    width: 350px;
-    height: 140px;
+.main_left_div {
+  /* width: 75%; */
+  /* width: 350px;
+    height: 140px; */
 }
 .main_left_list {
   font-family: "Objective";
@@ -66,14 +78,13 @@
   font-weight: 500;
   font-size: 14px;
   line-height: 210%;
-  color: #32C69A;
-  /* margin-left: -12px; */
+  color: #32c69a;
 }
-.main_left_div2{
-    margin: 10px 20px
+.main_left_div2 {
+  /* margin: 10px 20px */
 }
 .main_left_btn {
-  background: #FF7762;
+  background: #ff7762;
   box-shadow: 0px 24px 38px 3px rgba(50, 198, 176, 0.1),
     0px 9px 46px 8px rgba(50, 198, 176, 0.08),
     0px 11px 15px -7px rgba(50, 198, 176, 0.16);
@@ -86,7 +97,7 @@
   font-style: normal;
   font-weight: 500;
   font-size: 16px;
-  color: #FFFFFF;
+  color: #ffffff;
   line-height: 24px;
   word-spacing: 1px;
 }
@@ -97,38 +108,22 @@
   font-style: normal;
   font-weight: 500;
   font-size: 16px;
-  color: #FFFFFF;
+  color: #ffffff;
   line-height: 24px;
   word-spacing: 1px;
 }
 .main_right {
   display: flex;
-  width: 50%;
-  position: relative;
+  width: 38vw;
+  justify-content: flex-end;
+  /* position: relative; */
 }
 .main_right_img {
   /* position: absolute; */
 }
 .main_image_pic {
-  width: 536px;
-  height: 689px;
-}
-.calender_img {
-  position: absolute;
-  box-shadow: 0px 24px 38px 3px rgba(93, 114, 140, 0.1), 0px 9px 46px 8px rgba(93, 114, 140, 0.08), 0px 11px 15px -7px rgba(93, 114, 140, 0.16);
-  background-color: white;
-  padding: 12px 12px;
-  bottom: 43px;
-  left: -60px;
-  border-radius: 3px;
-}
-.remotework_img {
-  position: absolute;
-  bottom: 55px;
-  left: 365px;
-}
-.Emoji_img {
-  position: absolute;
-  left: 415px;
-  top: 80px;
+  height: 97%;
+
+  /* width: 536px;
+  height: 689px; */
 }
