--- a/src/pages/home/OfferSectionStyle.css
+++ b/src/pages/home/OfferSectionStyle.css
@@ -60,6 +60,15 @@
   gap: 20px;
   margin: 90px 50px;
 }
+@media screen and (max-width: 1000px) {
+  .offerBox{
+    flex-direction: column;
+    align-items: center;
+    gap: 100px;
+
+  }
+  
+}
 .offerimg {
   position: absolute;
   /* left: 113px; */
